...

            Row {
                if (showPhoneAction) {
                    IconButton(onClick = onCall) {
                        Icon(
                            imageVector = Icons.Default.Call,
                            contentDescription = "Call",
                            tint = PrimerGreen
                        )
                    }
                }
                if (showMessageAction) {
                    IconButton(onClick = onMessage) {
                        Icon(
                            imageVector = Icons.Default.Email,
                            contentDescription = "Message",
                            tint = PrimerGreen
                        )
                    }
                }
                if (showWhatsAppAction) {
                    IconButton(onClick = onWhatsApp) {
...
